--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="ASAP: a WebSockets & Web Application Messaging Protocol (WAMP) web client"
+      content="ASAP: a WebSocket & Web Application Messaging Protocol (WAMP) web client"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
