--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="ASAP: a WebSocket & Web Application Messaging Protocol (WAMP) web client"
+      content="MSG Central: a WebSocket & Web Application Messaging Protocol (WAMP) web client"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ASAP</title>
+    <title>MSG Central</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
